# Online_Ticketing_System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  run.py  setup.md  setup.py
app/: __init__.py  routes.py  tickets.py
app/templates/: create_ticket.html  update_ticket.html
src/: __init__.py  admin.py  auth.py  models.py  routes.py  tickets.py
src/templates/: admin_panel.html  base.html  create_ticket.html  index.html  login.html  register.html  ticket_details.html  ticket_list.html  update_ticket.html
