[project]
name = "online-ticketing-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Sai Sravani Lekkala"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
