[tool.poetry]
name = "online-ticketing-system"
version = "0.1.0"
description = "A modern, user-friendly support ticket management system"
authors = ["Sai Sravani Lekkala"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.5.1"
eventlet = "^0.39.1"
flask-login = "^0.6.3"
flask-migrate = "^4.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.0"
werkzeug = "^3.0.1"
gunicorn = "^21.2.0"
h11 = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
